--- a/_posts/2018-08-12-vue.markdown
+++ b/_posts/2018-08-12-vue.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-modal-id: 2
+modal-id: 4
 date: 2017-07-15
-img: bootstarp-theme.png
+img: Vue_portfoilio.png
 alt: image-alt
 project-date: July 2017
 client: Start Bootstrap
