--- a/_posts/2018-08-13-angular.markdown
+++ b/_posts/2018-08-13-angular.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-modal-id: 3
+modal-id: 5
 date: 2018-07-14
-img: jekyll.png
+img: Angular_Portfolio.png
 alt: image-alt
 project-date: July 2018
 client: Start Jekyll FreeLancer-Theme
