--- a/_posts/2018-08-09-other.markdown
+++ b/_posts/2018-08-09-other.markdown
@@ -9,3 +9,6 @@ client: Me
 category: Web Development
 description: Personnel Portfolio Site using React/Redux. login, post, like action module
 ---
+
+### My Public Git Repo
+[https://github.com/DarkoArnautov](https://github.com/DarkoArnautov)
