--- a/_posts/2018-08-13-angular.markdown
+++ b/_posts/2018-08-13-angular.markdown
@@ -9,3 +9,10 @@ client: Start Jekyll FreeLancer-Theme
 category: Web Development
 description: Personnel Introdution site using Jekyll
 ---
+
+#### 1. Angular/Hugo/Aws/Gulp
+
+[https://www.mortgagerewind.com/apply/](https://www.mortgagerewind.com/apply/)
+[https://www.mortgagerewind.com/calculators/reverse-mortgage-calculator/#](https://www.mortgagerewind.com/calculators/reverse-mortgage-calculator/#)
+
+Client need to modify design, and calculator, apply module
